--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This contains the daily problems of Leetcode
+This contains the daily challenge problems of Leetcode.
 
 April onwards, all the submissions are in C++ language, earlier ones are in Python3.
